# clik2_node_pkg

./: .gitignore  CLI_commands.txt  CMakeLists.txt  J_Red_QP_instructions.md  QP-MRmin_instructions.md  README.md  Red_QP-MRmin_instructions.md  clik2_prompt.txt  package.xml
config/: mobile_wx250s_joint_pos_ctrl.yaml  modes.yaml
include/clik2_node_pkg/: clik_uam_node.hpp  planner.hpp
launch/: clik_real.launch.py  clik_sitl.launch.py  clik_uam_visual.launch.py
model/: t960a.urdf  t960a.urdf.xacro  t960a_base.urdf.xacro  t960a_real.urdf.xacro  wx250s.urdf  wx250s_sim.urdf
model/meshes/drone_v2_1/: corpo1_visual.mtl
model/meshes/landing_gear_dx_1/: lg_visual.mtl
rviz/: clik_uam.rviz
scripts/: check_pinocchio.py  control_acc_space_robot.py  send_sleep_pose.py  test_acc_control_QP.py  test_acc_control_onlyJ_QP.py  test_acc_ik_pinocchio.py  uam_ik_with_drone_plan.py
src/: clik_uam_node.cpp  planner.cpp  real_drone_pose_pub.cpp  real_drone_vel_pub.cpp  rviz_marker_node.cpp  world_to_base_link_broadcaster.cpp
